--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.25",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-timer": "^1.3.6",
     "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15"
