--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@react-native-community/masked-view": "^0.1.6",
     "react": "16.9.0",
     "react-native": "0.61.1",
+    "react-native-fab": "^1.0.9",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-floating-action": "^1.20.0",
     "react-native-fs": "^2.16.2",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-to-pdf": "^1.1.0",
+    "react-native-realm": "^0.1.2",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.25",
@@ -26,7 +29,8 @@
     "react-native-timer": "^1.3.6",
     "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15"
+    "react-navigation-stack": "^2.0.15",
+    "realm": "^3.6.3"
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
