--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,8 @@ target 'formVistoriaV61' do
 
 
 
+  pod 'RNImageToPdf', :path => '../node_modules/react-native-image-to-pdf'
+
   target 'formVistoriaV61Tests' do
     inherit! :search_paths
     # Pods for testing
